cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

add_subdirectory(ABGR_Extension)
add_subdirectory(Arbitrary_Clip_Plane)
add_subdirectory(Blender)
add_subdirectory(Dinospin)
add_subdirectory(Evaluator_Test)
add_subdirectory(Fog_Test)
add_subdirectory(GL_Puzzle)
add_subdirectory(GLUT_Bitmap_Font)
add_subdirectory(GLUT_Bitmap_Stroke_Font)
add_subdirectory(GLUT_Plane)
add_subdirectory(Highlight)
add_subdirectory(Lighting_Laboratory)
add_subdirectory(MJK_Warp)
add_subdirectory(Molehill)
add_subdirectory(Movelight)
add_subdirectory(OpenGL_Halo_Magic)
add_subdirectory(Red_3D_Lighted_Cube)
add_subdirectory(Shadowy_Leapin_Lizards)
add_subdirectory(Stencil_Enabled)
