cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

add_subdirectory(ABGR_Extension)
add_subdirectory(Anti-aliased_Stroke_Font)
add_subdirectory(Arbitrary_Clip_Plane)
add_subdirectory(Blender)
add_subdirectory(Dinoball)
add_subdirectory(Dinospin)
add_subdirectory(Evaluator_Test)
add_subdirectory(Feedback)
add_subdirectory(Fog_Test)
add_subdirectory(Four_Subwindows)
add_subdirectory(GLUT_Bitmap_Font)
add_subdirectory(GLUT_Bitmap_Stroke_Font)
add_subdirectory(GLUT_Dials)
add_subdirectory(GLUT_Dials_2)
add_subdirectory(GLUT_Dino)
add_subdirectory(GLUT_Plane)
add_subdirectory(GLUT_Spotlight_Swing)
add_subdirectory(GL_Puzzle)
add_subdirectory(Highlight)
add_subdirectory(Leapin_Lizards)
add_subdirectory(Lighting_Laboratory)
add_subdirectory(MJK_Sift)
add_subdirectory(MJK_Warp)
add_subdirectory(Molehill)
add_subdirectory(Movelight)
add_subdirectory(Olympic)
add_subdirectory(OpenGL_Halo_Magic)
add_subdirectory(Origami)
add_subdirectory(Red_3D_Lighted_Cube)
add_subdirectory(Scene)
add_subdirectory(Screen_Door_Transparency)
add_subdirectory(Select_Test)
add_subdirectory(Shadow_Cube)
add_subdirectory(Shadowy_Leapin_Lizards)
add_subdirectory(Single_Buffered_To_Double_Buffered)
add_subdirectory(Single_Triangle)
add_subdirectory(Sphere)
add_subdirectory(Splat_Logo)
add_subdirectory(Stars)
add_subdirectory(Stencil_Enabled)
add_subdirectory(Stencil_Test)
add_subdirectory(Surface_Grid)
add_subdirectory(Two_Sided_Lighting)
